K8S/lex-legal-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lex-legal-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lex-legalsettings
  template:
    metadata:
      labels:
        app: lex-legalsettings
    spec:
      containers:
        - name: lex-legalsettings
          image: zvonimirs1975/lex-legalsettings:latest
---
apiVersion: v1
kind: Service
metadata:
  name: lex-legal-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: lex-legalsettings
  ports:
  - name: lex-legalsettings
    protocol: TCP
    port: 80
    targetPort: 80
  - name: lex-legalgrpc
    protocol: TCP
    port: 666
    targetPort: 666
