K8S/lex-requestrecords-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lex-requestrecords-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lex-requestrecordsservice
  template:
    metadata:
      labels:
        app: lex-requestrecordsservice
    spec:
      containers:
        - name: lex-requestrecordsservice
          image: zvonimirs1975/lex-requestrecordsservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: lex-requestrecords-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: lex-requestrecordsservice
  ports:
  - name: lex-requestrecordsservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: lex-requestrecordsgrpc
    protocol: TCP
    port: 666
    targetPort: 666
