K8S/lex-subscription-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lex-subscription-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lex-subscriptionservice
  template:
    metadata:
      labels:
        app: lex-subscriptionservice
    spec:
      containers:
        - name: lex-subscriptionservice
          image: zvonimirs1975/lex-subscriptionservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: lex-subscription-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: lex-subscriptionservice
  ports:
  - name: lex-subscriptionservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: lex-subscriptiongrpc
    protocol: TCP
    port: 666
    targetPort: 666
