K8S/lex-subscription-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: lex-subscriptionnpservice-srv
spec:
  type: NodePort
  selector:
    app: lex-subscriptionservice
  ports:
    - name: lex-subscriptionservice
      protocol: TCP
      port: 80
      targetPort: 80
