K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/postavke
            pathType: Prefix
            backend:
              service:
                name: lex-legal-clusterip-srv
                port:
                  number: 80
          - path: /api/identifikacija
            pathType: Prefix
            backend:
              service:
                name: lex-identity-clusterip-srv
                port:
                  number: 80
          - path: /api/pravaispitanika
            pathType: Prefix
            backend:
              service:
                name: lex-requestrecords-clusterip-srv
                port:
                  number: 80
          - path: /api/pretplata
            pathType: Prefix
            backend:
              service:
                name: lex-subscription-clusterip-srv
                port:
                  number: 80
          - path: /api/pravonapristup
            pathType: Prefix
            backend:
              service:
                name: lex-requestprocess-clusterip-srv
                port:
                  number: 80
